--- a/murtaUp/sass/style.scss
+++ b/murtaUp/sass/style.scss
@@ -712,6 +712,10 @@ ul {
         display: block;
         text-align: center;
     }
+    .header {
+        height: 450px;
+        
+    }
 
 }
 
